--- a/hexlet-django-blog/hexlet_django_blog/templates/about.html
+++ b/hexlet-django-blog/hexlet_django_blog/templates/about.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>О блоге — Hexlet Django Blog</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}О блоге — Блог на Django{% endblock %}
+
+{% block content %}
     <h1>О блоге</h1>
     <p>Эксперименты с Django на Хекслете</p>
-</body>
-</html>
+    <p>Теги: {{ tags|join:", " }}</p>
+{% endblock %}
